[Kingston] Fixed spacing issues with .content class

--- a/web/cobrands/kingston/base.scss
+++ b/web/cobrands/kingston/base.scss
@@ -13,10 +13,14 @@
 body {
     font-family: $body-font;
     color: $black;
+    background-color: #eef1e6;
 }
 
 .content {
     color: $black !important;
+    background: #fff;
+    padding: 0.75rem 1.5rem;
+    margin-top: 1em;
 }
 
 .visually-hidden {
